--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "docsify serve ./docs",
-    "build": "node build.js",
+    "archive": "node archive.js",
+    "build-api": "node build-api.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wei Wang",
@@ -13,6 +14,7 @@
   "dependencies": {
     "colors": "^1.1.2",
     "fs-extra": "^3.0.1",
+    "js-yaml": "^3.8.4",
     "replace-in-file": "^2.5.0"
   }
 }
