--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "colors": "^1.1.2",
     "concat-stream": "^1.6.0",
+    "escape-html": "^1.0.3",
     "fs-extra": "^3.0.1",
     "marked": "^0.3.6",
     "node-prismjs": "^0.1.0",
