--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -73,6 +73,45 @@ returnType = "bool"
 hasSetter = false
 summary = "Gets whether there is a forward page in the back-forward list that can be navigated to."
 
+[[Properties]]
+name = "BackgroundColor"
+returnType = "Color"
+hasSetter = true
+summary = """
+Gets or sets the background color of web view. The default value if `Color.white`.
+
+This only sets the background color of the content view of the web view. Normally, the background
+color will be hidden by the web page background. If you want to make the web view background visible,
+you need to make the web page it transparent by adding some necessary style to it.
+
+This property only change the web view background. 
+If you want to make the whole web view transparent, use `Alpha` instead.
+"""
+example = """
+```csharp
+// Set the web view background (under the web page) to red.
+webView.BackgroundColor = Color.red;
+```
+"""
+
+[[Properties]]
+name = "Alpha"
+returnType = "float"
+hasSetter = true
+summary = """
+Gets or sets the alpha value of the whole web view.
+
+You could make the game scene behind web view visible to make the web view transparent.
+
+Default is `1.0f`, which means totally opaque. Set it to `0.0f` will make the web view totally transparent.
+"""
+example = """
+```csharp
+// Set the web view half transparent.
+webView.Alpha = 0.5f;
+```
+"""
+
 [[Methods]]
 name = "Load"
 syntax = "Load(string url)"
@@ -620,3 +659,391 @@ color = "blue"
 name = "enabled"
 type = "bool"
 summary = "Whether JavaScript should be enabled."
+
+[[Methods]]
+name = "SetAllowJavaScriptOpenWindow"
+syntax = "SetAllowJavaScriptOpenWindow(bool flag)"
+returnType = "void"
+summary = "Sets whether JavaScript can open windows without user interaction.\n\nBy setting this to `true`, an automatically JavaScript navigation will be allowed in the web view."
+example = """
+```csharp
+// Allow JavaScript open window automatically.
+UniWebView.SetAllowJavaScriptOpenWindow(true);
+
+var webView = gameObject.AddComponent<UniWebView>();
+
+// Now, the following JavaScript code could navigate to 
+// "example.com" without user interaction in `webView`.
+setTimeout(function() {
+    window.location.href = 'https://example.com';
+}, 300);
+```
+"""
+[[Methods.badges]]
+name = "static"
+color = "blue"
+[[Methods.parameters]]
+name = "flag"
+type = "bool"
+summary = "Whether JavaScript could open window automatically."
+
+[[Methods]]
+name = "CleanCache"
+syntax = "CleanCache()"
+returnType = "void"
+summary = "Clean web view cache. This removes cached local data of web view.\n\nIf you need to clear all cookies, use `ClearCookies` instead."
+
+[[Methods]]
+name = "ClearCookies"
+syntax = "ClearCookies()"
+returnType = "void"
+summary = "Clear all cookies from web views."
+notice = "This will clear cookies from all domains in the web view and previous. If you only need to remove cookies from a certain domain, use `SetCookie` instead."
+example = """
+```csharp
+UniWebView.ClearCookies();
+```
+"""
+[[Methods.badges]]
+name = "static"
+color = "blue"
+
+[[Methods]]
+name = "SetCookie"
+syntax = "SetCookie(string url, string cookie)"
+returnType = "void"
+summary = """
+Sets a cookie for a certain url.
+
+The `cookie` string supports all available cookie properties as well as multiple cookies. See 
+
+UniWebView respect the server cookie header by default. Generally, you do not need to set the 
+cookie from client manually. However, if you have to pass your server a manually set cookie, 
+use this method.
+"""
+example = """
+```csharp
+// Set a cookie "testCookie=1" to current url/domain.
+UniWebView.SetCookie(webView.Url, "testCookie=1");
+
+// Set a full properties specified cookie.
+UniWebView.SetCookie("https://example.com", "sessionToken=abc123; Expires=Wed, 09 Jun 2021 10:18:14 GMT");
+```
+"""
+[[Methods.badges]]
+name = "static"
+color = "blue"
+[[Methods.parameters]]
+name = "url"
+type = "string"
+summary = "The url to which cookie will be set."
+[[Methods.parameters]]
+name = "cookie"
+type = "string"
+summary = "The cookie string to set. Need more information on cookie? See the [HTTP cookie](https://en.wikipedia.org/wiki/HTTP_cookie) page."
+
+[[Methods]]
+name = "GetCookie"
+syntax = "GetCookie(string url, string key)"
+returnType = "string"
+returnValue = "Value of the target cookie under url."
+summary = "Gets the cookie value under a url and key."
+example = """
+```csharp
+UniWebView.GetCookie("https://example.com", "testCookie");
+// => The corresponding cookie value. Or "" if there is no such cookie.
+```
+"""
+[[Methods.badges]]
+name = "static"
+color = "blue"
+[[Methods.parameters]]
+name = "url"
+type = "string"
+summary = "The url (domain) where the target cookie is."
+[[Methods.parameters]]
+name = "key"
+type = "string"
+summary = "The key for target cookie value."
+
+[[Methods]]
+name = "SetShowSpinnerWhileLoading"
+syntax = "SetShowSpinnerWhileLoading(bool flag)"
+returnType = "void"
+summary = """
+Sets whether to show a loading indicator while the loading is in progress.
+"""
+[[Methods.parameters]]
+name = "flag"
+type = "bool"
+summary = "Whether an indicator should show."
+
+[[Methods]]
+name = "SetSpinnerText"
+syntax = "SetSpinnerText(string text)"
+returnType = "void"
+summary = "Sets the text displayed in the loading indicator, if `SetShowSpinnerWhileLoading` is set to `true`."
+[[Methods.parameters]]
+name = "text"
+type = "string"
+summary = "The text to display while loading indicator visible. Default is \"Loading...\""
+
+[[Methods]]
+name = "SetHorizontalScrollBarEnabled"
+syntax = "SetHorizontalScrollBarEnabled(bool enabled)"
+returnType = "void"
+summary = """
+Sets whether the horizontal scroll bar should show when the web content beyonds web view bounds.
+
+This only works on mobile platforms. It will do nothing on macOS Editor.
+"""
+[[Methods.parameters]]
+name = "enabled"
+type = "bool"
+summary = "Whether enable the scroll bar or not."
+
+[[Methods]]
+name = "SetVerticalScrollBarEnabled"
+syntax = "SetVerticalScrollBarEnabled(bool enabled)"
+returnType = "void"
+summary = """
+Sets whether the vertical scroll bar should show when the web content beyonds web view bounds.
+
+This only works on mobile platforms. It will do nothing on macOS Editor.
+"""
+[[Methods.parameters]]
+name = "enabled"
+type = "bool"
+summary = "Whether enable the scroll bar or not."
+
+[[Methods]]
+name = "SetBouncesEnabled"
+syntax = "SetBouncesEnabled(bool enabled)"
+returnType = "void"
+summary = """
+Sets whether the web view should show with a bounces effect when scrolling to page edge.
+
+This only works on mobile platforms. It will do nothing on macOS Editor.
+"""
+[[Methods.parameters]]
+name = "enabled"
+type = "bool"
+summary = "Whether enable the bounces effect should be applied or not."
+
+[[Methods]]
+name = "SetZoomEnabled"
+syntax = "SetZoomEnabled(bool enabled)"
+returnType = "void"
+summary = "Sets whether the web view supports zoom guesture to change content size. Default is `false`, which means the zoom guesture is not supported."
+[[Methods.parameters]]
+name = "enabled"
+type = "bool"
+summary = "Whether the zoom guesture is allowed or not."
+
+[[Methods]]
+name = "AddPermissionTrustDomain"
+syntax = "AddPermissionTrustDomain(string domain)"
+returnType = "void"
+summary = """
+Adds a trusted domain to white list and allow permission requests from the domain.
+
+You only need this on Android devices with system before 6.0 when a site needs the location or camera 
+permission. It will allow the permission gets approved so you could access the corresponding devices.
+From Android 6.0, the permission requests method is changed and this is not needed anymore.
+"""
+example = """
+```csharp
+webView.AddPermissionTrustDomain("my-own-site.com");
+```
+"""
+notice = """This method is not the same to `AddSslExceptionDomain`, 
+which is for bypassing SSL checking. You only need this method when 
+you have trouble in granting users' permission. It is not needed on iOS.
+"""
+[[Methods.badges]]
+name = "Android"
+color = "green"
+[[Methods.parameters]]
+name = "domain"
+type = "string"
+summary = "The domain to add to the white list."
+
+[[Methods]]
+name = "RemovePermissionTrustDomain"
+syntax = "RemovePermissionTrustDomain(string domain)"
+returnType = "void"
+summary = "Removes a trusted domain from white list."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+[[Methods.parameters]]
+name = "domain"
+type = "string"
+summary = "The domain to remove from white list."
+
+[[Methods]]
+name = "SetBackButtonEnabled"
+syntax = "SetBackButtonEnabled(bool enabled)"
+returnType = "void"
+summary = """
+Sets whether the device back button should be enabled to execute \"go back\" or \"closing\" operation.
+
+On Android, the device back button in navigation bar will navigate users to a back page. If there is 
+no any back page avaliable, the back button clicking will try to raise a `OnShouldClose` event and try 
+to close the web view if `true` is return from the event. If the `OnShouldClose` is not listened, 
+the web view will be closed and the UniWebView component will be destroyed to release using resource.
+
+Listen to `OnKeyCodeReceived` if you need to disable the back button, but still want to get the back 
+button key pressing event.
+
+This method is only for Android. On iOS, you could show a toolbar with navigation and Done buttons for 
+similar purpose.
+
+Default is enabled.
+"""
+[[Methods.badges]]
+name = "Android"
+color = "green"
+[[Methods.parameters]]
+name = "enabled"
+type = "bool"
+summary = "Whether the back button should perform go back or closing operation to web view."
+
+[[Methods]]
+name = "SetUseWideViewPort"
+syntax = "SetUseWideViewPort(bool flag)"
+returnType = "void"
+summary = """
+Sets whether the web view should enable support for the \"viewport\" HTML meta tag or should use a wide viewport.
+
+This method is only for Android. Default is disabled.
+"""
+[[Methods.badges]]
+name = "Android"
+color = "green"
+[[Methods.parameters]]
+name = "flag"
+type = "bool"
+summary = "Whether to enable support for the viewport meta tag."
+
+[[Methods]]
+name = "SetLoadWithOverviewMode"
+syntax = "SetLoadWithOverviewMode(bool flag)"
+returnType = "void"
+summary = """
+Sets whether the web view loads pages in overview mode, that is, zooms out the content to fit on screen by width.
+
+This method is only for Android. Default is disabled.
+"""
+[[Methods.badges]]
+name = "Android"
+color = "green"
+[[Methods.parameters]]
+name = "flag"
+type = "bool"
+summary = "Whether to enable support for the overview mode."
+
+[[Methods]]
+name = "SetImmersiveModeEnabled"
+syntax = "SetImmersiveModeEnabled(bool enabled)"
+returnType = "void"
+summary = """
+Sets whether the web view should behave in immersive mode, that is, 
+hides the status bar and navigation bar with a sticky style.
+
+If disabled, the navigation bar will always show up while the web view is visible.
+
+This method is only for Android. Default is enabled.
+"""
+[[Methods.badges]]
+name = "Android"
+color = "green"
+[[Methods.parameters]]
+name = "enabled"
+type = "bool"
+summary = "Whether to enable immersive mode when web view is showing up."
+
+[[Methods]]
+name = "SetShowToolbar"
+syntax = "SetShowToolbar(bool show, bool animated, bool onTop, bool adjustInset)"
+returnType = "void"
+summary = """
+Sets whether to show a toolbar which contains navigation buttons and Done button.
+
+You could choose to show or hide the tool bar. By configuring the `animated` and `onTop` 
+parameters, you can control the animating and position of the toolbar. If the toolbar is 
+overlapping with some part of your web view, pass `adjustInset` with `true` to have the 
+web view reloacating itself to avoid the overlap.
+
+This method is only for iOS. The toolbar is hidden by default.
+"""
+example = """
+```csharp
+// Show a toolbar at top of screen with animation.
+webView.SetShowToolbar(true, true, true);
+
+// Hide the tool bar without animation. At the same time, make 
+// the web view snap to screen top if there was overlapping between 
+// the web view and toolbar.
+webView.SetShowToolbar(false, false, true, true);
+```
+"""
+[[Methods.badges]]
+name = "iOS"
+color = "orange"
+[[Methods.parameters]]
+name = "show"
+type = "bool"
+summary = "Whether the toolbar should show or hide."
+[[Methods.parameters]]
+name = "animated"
+type = "bool"
+summary = "Whether the toolbar state changing should be with animation. Default is `false`."
+[[Methods.parameters]]
+name = "opTop"
+type = "bool"
+summary = "Whether the toolbar should snap to top of screen or to bottom of screen. Default is `true`"
+[[Methods.parameters]]
+name = "adjustInset"
+type = "bool"
+summary = "Whether the toolbar transition should also afjust web view position and size if overlapped. Default is `false`"
+
+[[Methods]]
+name = "SetWebContentsDebuggingEnabled"
+syntax = "etWebContentsDebuggingEnabled(bool enabled)"
+returnType = "void"
+summary = """
+Enables debugging of web contents. You could inspect of the content of a 
+web view by using a browser development tool of Chrome.
+
+This method is only for Android. On iOS, you do not need additional step. 
+You could open Safari's developer tools to debug a web view on iOS.
+"""
+[[Methods.badges]]
+name = "Android"
+color = "green"
+[[Methods.badges]]
+name = "static"
+color = "blue"
+[[Methods.parameters]]
+name = "enabled"
+type = "bool"
+summary = "Whether the content debugging should be enabled."
+
+[[Methods]]
+name = "GetHTMLContent"
+syntax = "GetHTMLContent(Action<string> handler)"
+returnType = "void"
+summary = "Gets the HTML content from current page by accessing its `outerHTML` with JavaScript."
+example = """
+```csharp
+webView.GetHTMLContent((content)=>{
+    print(content);
+    // => "<html><head> ... </html>"
+});
+```
+"""
+[[Methods.parameters]]
+name = "handler"
+type = "Action<string>"
+summary = "Called after the JavaScript executed. The parameter `string` is the content read from page."
