--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -345,6 +345,27 @@ type = "Action"
 summary = "Completion handler which will be called when animation finishes. Default is `null`."
 
 [[Methods]]
+name = "UpdateFrame"
+syntax = "UpdateFrame()"
+returnType = "void"
+summary = """
+Update and set current frame of web view to match the setting.
+
+This is useful if the `referenceRectTransform` is changed and you need to sync the frame change
+to the web view. This method follows the frame determining rules.
+"""
+example = """
+```csharp
+// In a UIBehavior script:
+// Called when associated `rectTransform` is changed.
+void OnRectTransformDimensionsChange() {
+    // This will update web view's frame to match the reference rect transform if set.
+    webView.UpdateFrame();
+}
+```
+"""
+
+[[Methods]]
 name = "AddJavaScript"
 syntax = "AddJavaScript(string jsString, Action<UniWebViewNativeResultPayload> completionHandler)"
 returnType = "void"
@@ -1010,7 +1031,7 @@ summary = "Whether the toolbar transition should also afjust web view position a
 
 [[Methods]]
 name = "SetWebContentsDebuggingEnabled"
-syntax = "etWebContentsDebuggingEnabled(bool enabled)"
+syntax = "SetWebContentsDebuggingEnabled(bool enabled)"
 returnType = "void"
 summary = """
 Enables debugging of web contents. You could inspect of the content of a 
@@ -1047,3 +1068,254 @@ webView.GetHTMLContent((content)=>{
 name = "handler"
 type = "Action<string>"
 summary = "Called after the JavaScript executed. The parameter `string` is the content read from page."
+
+[[Events]]
+name = "OnPageStarted"
+syntax = "OnPageStarted(UniWebView webView, string url)"
+returnType = "event"
+summary = """
+Raised when the web view starts loading a url.
+
+This event will be invoked for both url loading with `Load` method or by a link navigating from page.
+"""
+example = """
+```csharp
+webView.OnPageStarted += (view, url) => {
+    print("Loading started for url: " + url);
+};
+webView.Load("https://example.com");
+
+// => "Loading started for url: https://example.com/"
+```
+"""
+[[Events.parameters]]
+name = "webView"
+type = "UniWebView"
+summary = "The web view component which raises this event."
+[[Events.parameters]]
+name = "url"
+type = "string"
+summary = "The url which the web view begins to load."
+
+[[Events]]
+name = "OnPageFinished"
+syntax = "OnPageFinished(UniWebView webView, int statusCode, string url)"
+returnType = "event"
+summary = """
+Raised when the web view finished to load a url successully.
+
+This method will be invoked when a valid response received from the url, regardless the response status.
+If a url loading fails before reaching to the server and getting a response, `OnPageErrorReceived` will be 
+raised instead.
+"""
+example = """
+```csharp
+webView.OnPageFinished += (view, statusCode, url) => {
+    print(statusCode);
+    print("Web view loading finished for: " + url);
+};
+
+webView.Load("https://example.com");
+// => "202"
+// => "Web view loading finished for: https://example.com"
+
+webView.Load("https://some_domain.com/404");
+// => "404"
+// => "Web view loading finished for: https://example.com"
+```
+"""
+[[Events.parameters]]
+name = "webView"
+type = "UniWebView"
+summary = "The web view component which raises this event."
+[[Events.parameters]]
+name = "statusCode"
+type = "int"
+summary = "HTTP status code received from response."
+[[Events.parameters]]
+name = "url"
+type = "string"
+summary = "The url which the web view begins to load."
+
+[[Events]]
+name = "OnPageErrorReceived"
+syntax = "OnPageErrorReceived(UniWebView webView, int errorCode, string errorMessage)"
+returnType = "event"
+summary = """
+Raised when an error encountered during the loading process. 
+Such as host not found or no Internet connection will raise this event.
+"""
+example = """
+```csharp
+webView.OnPageErrorReceived += (view, error, message) => {
+    print("Errored.");
+};
+
+webView.Load("https://onevcat-not-existing.com/");
+// => "Errored."
+
+webView.Load("unknown://host?param1=value1&param2=value2");
+// => "Errored."
+
+webView.Load("https://self-signed.badssl.com");
+// => "Errored."
+```
+"""
+[[Events.parameters]]
+name = "webView"
+type = "UniWebView"
+summary = "The web view component which raises this event."
+[[Events.parameters]]
+name = "errorCode"
+type = "int"
+summary = "The error code which indicates the error type. It is different from systems and platforms."
+[[Events.parameters]]
+name = "url"
+type = "string"
+summary = "The error message which indicates the error."
+
+[[Events]]
+name = "OnMessageReceived"
+syntax = "OnMessageReceived(UniWebView webView, UniWebViewMessage message)"
+returnType = "event"
+summary = """
+Raised when a message from web view is received. 
+
+Generally, the message comes from a navigation to 
+a scheme which is observed by current web view. You could use `AddUrlScheme` and 
+`RemoveUrlScheme` to manipulate the scheme list.
+
+"uniwebview://" scheme is default in the list, so a clicking on link starts with "uniwebview://"
+will raise this event, if it is not removed.
+"""
+example = """
+```csharp
+webView.OnMessageReceived += (view, message) => {
+    print(message.Scheme);
+    print(message.Path);
+    print(message.Args["param1"]);
+    print(message.Args["param2"]);
+}
+webView.Load("uniwebview://host?param1=value1&param2=value2");
+// => "uniwebview", "host", "value1", "value2"
+
+
+anotherWebView.OnMessageReceived += (view, message) => {
+    print(message.RawMessage);
+}
+anotherWebView.AddUrlScheme("myscheme");
+
+// Clike the link "myscheme://action" in a web page.
+// <a href="myscheme://action">Click Me</a>
+
+// => "myscheme://action"
+```
+"""
+[[Events.parameters]]
+name = "webView"
+type = "UniWebView"
+summary = "The web view component which raises this event."
+[[Events.parameters]]
+name = "message"
+type = "UniWebViewMessage"
+summary = "The message object which contains information like message path and arguments."
+
+[[Events]]
+name = "OnShouldClose"
+syntax = "OnShouldClose(UniWebView webView)"
+returnType = "event bool"
+summary = """
+Raised when the web view is about to close itself.
+
+This event is raised when the users close the web view by Back button on Android, Done button on iOS,
+or Close button on Unity Editor. It gives a chance to make final decision whether the web view should 
+be closed and destroyed. You should also clean all related resources you created (such as a reference to
+the web view.)
+
+If this event is not listened and implemented, the web view will be closed and destroyed by default when
+it needed.
+"""
+returnValue = "Whether the web view should be closed and destroyed."
+example = """
+```csharp
+// Clean webView field when 
+public class MyBehaviour : MonoBehaviour {
+    var webView;
+
+    void Start() {
+        webView = gameObject.AddComponent<UniWebView>();
+        webView.OnShouldClose += (view) => {
+            webView = null;
+            return true;
+        };
+    }
+}
+
+// Make the web view there without being closed
+webView.OnShouldClose += (view) => {
+    return false;
+};
+```
+"""
+[[Events.parameters]]
+name = "webView"
+type = "UniWebView"
+summary = "The web view component which raises this event."
+
+[[Events]]
+name = "OnKeyCodeReceived"
+syntax = "OnKeyCodeReceived(UniWebView webView, int keyCode)"
+returnType = "event"
+summary = """
+Raised when a key (like back button or volume up) on the device is pressed.
+
+This event only raised on Android. It is useful when you disabled the back button but still need to 
+get the back button event. On iOS, user's key action is not avaliable and this event will never be 
+raised.
+"""
+example = """
+```csharp
+webView.OnKeyCodeReceived += (view, keyCode) => {
+    if (keyCode == 4) {
+        print("Back Button was clicked.");
+    }
+};
+```
+"""
+[[Events.badges]]
+name = "Android"
+color = "green"
+[[Events.parameters]]
+name = "webView"
+type = "UniWebView"
+summary = "The web view component which raises this event."
+[[Events.parameters]]
+name = "keyCode"
+type = "int"
+summary = "The key code of pressed key. See [Android API for keycode](https://developer.android.com/reference/android/view/KeyEvent.html#KEYCODE_0) to know the possible values."
+
+[[Events]]
+name = "OnOreintationChanged"
+syntax = "OnOreintationChanged(UniWebView webView, ScreenOrientation orientation)"
+returnType = "event"
+summary = """
+Raised when the screen oreintation is changed. It is a good time to set the web view frame if you 
+need to support multiple oreintations in your game.
+"""
+example = """
+```csharp
+// Keep the web view full screen on both portait and landscape mode.
+webView.Frame = new Rect(0, 0, Screen.width, Screen.height);
+webView.OnOreintationChanged += (view, orientation) => {
+    webView.Frame = new Rect(0, 0, Screen.width, Screen.height);
+};
+```
+"""
+[[Events.parameters]]
+name = "webView"
+type = "UniWebView"
+summary = "The web view component which raises this event."
+[[Events.parameters]]
+name = "orientation"
+type = "ScreenOrientation"
+summary = "The screen orientation for current state."
