--- a/api-def/uniwebviewnativelistener.toml
+++ b/api-def/uniwebviewnativelistener.toml
@@ -12,4 +12,4 @@ notice = "It will be linked to original web view so you should never set it your
 name = "Name"
 returnType = "string"
 hasSetter = false
-summary = "Name of current listener. This is a UUID string by which native side could use to find the message destination."
+summary = "Name of the current listener. This is a UUID string by which native side could use to find the message destination."
